testsuite/bsc.interra/messages/EModule_/EModule_2.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EModule_2.bs
code generation for myReg starts
Error: "EModule_2.bs", line 23, column 7: (G0025)
  Trying to generate a module which is undefined because of an incomplete
  pattern match.
